# aegis-pam

./: README.md  meson.build
config/: aegis-agent.service  aegis-auth  aegis_pam_agent.conf  aegis_pam_agent.service  aegis_pam_module.conf
scripts/: dev_monitor.sh  install.sh  monitor.sh  test.sh  uninstall.sh
src/: aegis_pam_agent.cpp  aegis_pam_module.cpp  http_client.hpp  pam_config.hpp  unix_socket.hpp  version.hpp
